# SFML-Chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/chess_app/: game_manager.hpp  uci_handler.hpp
include/game_logic/: board.hpp  constants.hpp  direction.hpp  enums.hpp  game.hpp  move.hpp  piece.hpp  player.hpp  position.hpp  types.hpp
include/game_logic/base/: board.hpp  direction.hpp  game.hpp  game_result.hpp  move.hpp  move_record.hpp  piece.hpp  player.hpp  position.hpp
include/game_logic/move_handler/: move_executor.hpp  move_validator.hpp
include/game_logic/moves/: normal_move.hpp
include/game_logic/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
include/game_logic/validator/: move_validator.hpp
include/game_render/: constants.hpp  enums.hpp
include/game_render/manager/: asset_manager.hpp
include/game_render/renderer/: base_renderer.hpp  board_renderer.hpp  highlight_renderer.hpp
lib/sfml/3.0.2/: sbom.spdx.json
lib/sfml/3.0.2/lib/: libsfml-audio.3.0.2.dylib  libsfml-network.3.0.2.dylib  libsfml-system.3.0.2.dylib  libsfml-window.3.0.2.dylib
lib/sfml/3.0.2/lib/pkgconfig/: sfml-window.pc
lib/sfml/3.0.2/share/doc/SFML/: SFML.tag
sfml/3.0.2/: INSTALL_RECEIPT.json
sfml/3.0.2/.brew/: sfml.rb
sfml/3.0.2/lib/: libsfml-graphics.3.0.2.dylib
sfml/3.0.2/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc
src/: main.cpp
src/chess_app/: CMakeLists.txt  game_manager.cpp  uci_handler.cpp
src/game_controller/: CMakeLists.txt
src/game_logic/: CMakeLists.txt  board.cpp  direction.cpp  game.cpp  move.cpp  piece.cpp  player.cpp  position.cpp
src/game_logic/base/: board.cpp  direction.cpp  game.cpp  game_result.cpp  move.cpp  move_record.cpp  piece.cpp  player.cpp  position.cpp
src/game_logic/move_handler/: move_executor.cpp  move_validator.cpp
src/game_logic/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/game_logic/validator/: move_validator.cpp
src/game_render/: CMakeLists.txt
src/game_render/manager/: asset_manager.cpp
src/game_render/renderer/: board_renderer.cpp  highlight_renderer.cpp
